--- a/analysis/gdp_prediction_analysis_univariate.Rmd
+++ b/analysis/gdp_prediction_analysis_univariate.Rmd
@@ -225,7 +225,7 @@ mdl_compare = tswgewrapped::ModelCompareUnivariate$new(x = x, mdl_list = models,
 ```
 
 ### ASE values across Batches
-```{r}
+```{r message=FALSE, warning=FALSE}
 ASEs = mdl_compare$get_tabular_metrics(ases = TRUE)
 print(ASEs)
 ```
