--- a/analysis/gdp_prediction_analysis_univariate.Rmd
+++ b/analysis/gdp_prediction_analysis_univariate.Rmd
@@ -213,8 +213,8 @@ f = fore.aruma.wge(x, phi=phi, theta = theta, d = d, s = s,
 ## Visualizing Results
 
 ```{r}
-models = list("ARMA Model 1" = list(phi = est.s.mle$phi, theta = est.s.mle$theta, sliding_ase = TRUE),
-              "ARIMA Model 1" = list(phi = est.ns.mle$phi, theta = est.ns.mle$theta, d = 1, s = 0, sliding_ase = TRUE)
+models = list("ARMA Model 1" = list(phi = est.s.mle$phi, theta = est.s.mle$theta, vara = est.s.mle$avar, sliding_ase = TRUE),
+              "ARIMA Model 1" = list(phi = est.ns.mle$phi, theta = est.ns.mle$theta, d = 1, s = 0, vara = est.ns.mle$avar, sliding_ase = TRUE)
               )
 ```
 
@@ -222,6 +222,12 @@ models = list("ARMA Model 1" = list(phi = est.s.mle$phi, theta = est.s.mle$theta
 ```{r}
 mdl_compare = tswgewrapped::ModelCompareUnivariate$new(x = x, mdl_list = models,
                                                        n.ahead = n.ahead, batch_size = batch_size)
+```
+
+### Compare Multiple Realizations
+
+```{r fig.height=6, message=FALSE, warning=FALSE}
+mdl_compare$plot_multiple_realizations(n.realizations = 4, seed = 100, scales = 'fixed')
 ```
 
 ### ASE values across Batches
