Fix mean shift in equations Create factor tables of MA portions of equations New knit

--- a/analysis/gdp_prediction_analysis_univariate.Rmd
+++ b/analysis/gdp_prediction_analysis_univariate.Rmd
@@ -143,7 +143,7 @@ est.arima.0.1.1.0 = est.arma.wge(dif1, p = 0, q = 1)
 
 
 ```{r}
-est.arima.0.1.1.0$theta
+factor.wge(est.arima.0.1.1.0$theta)
 ```
 
 
@@ -254,7 +254,7 @@ est.arma.13.1 <- est.arma.wge(x, p = 13, q = 1)
 ```
 
 ```{r}
-est.arma.13.1$theta
+factor.wge(est.arma.13.1$theta)
 ```
 
 #### Factored Form
@@ -263,7 +263,7 @@ est.arma.13.1$theta
 est.arma.13.1$avar
 ```
 
-**(1-0.993$B$)(1-0.604$B$+0.888$B^2$)(1+1.794$B$+0.878$B^2$)(1+0.539$B$+0.841$B^2$)(1-1.424B+0.807$B^2$)(1-1.662$B$+0.742$B^2$)(1+1.155$B$+0.720$B^2$)($X_{t}$ + `r mean(x)`) = (1-0.882B) $a_{t}$  with $\sigma_{a}^2$ = `r est.arma.13.1$avar`**
+**(1-0.993$B$)(1-0.604$B$+0.888$B^2$)(1+1.794$B$+0.878$B^2$)(1+0.539$B$+0.841$B^2$)(1-1.424B+0.807$B^2$)(1-1.662$B$+0.742$B^2$)(1+1.155$B$+0.720$B^2$)($X_{t}$ - `r mean(x)`) = (1-0.882B) $a_{t}$  with $\sigma_{a}^2$ = `r est.arma.13.1$avar`**
 
 ### Non Stationary Model
 
@@ -286,7 +286,7 @@ est.arima.11.1.0.0 <- est.arma.wge(dif1, p = 11, q = 0)
 est.arima.11.1.0.0$avar
 ```
 
-**(1-0.6227$B$+0.8766$B^2$)(1+1.7743$B$+0.8617$B^2$)(1-1.5025$B$+0.8361$B^2$)(1+0.5210$B$+0.8091$B^2$)(1+1.0965$B$+0.6776$B^2$)(1-0.6025$B$)(1 - $B$)($X_{t}$ + `r mean(x)`) = $a_{t}$  with $\sigma_{a}^2$ = `r est.arima.11.1.0.0$avar`**
+**(1-0.6227$B$+0.8766$B^2$)(1+1.7743$B$+0.8617$B^2$)(1-1.5025$B$+0.8361$B^2$)(1+0.5210$B$+0.8091$B^2$)(1+1.0965$B$+0.6776$B^2$)(1-0.6025$B$)(1 - $B$)($X_{t}$ - `r mean(x)`) = $a_{t}$  with $\sigma_{a}^2$ = `r est.arima.11.1.0.0$avar`**
 
 ## Visualizing Model Comparison
 
